opam-version: "1.2"
maintainer: "tck <tck29@cam.ac.uk"
authors: [ "Calvin Kao" ]
homepage: "https://github.com/tachukao/owl_lbfgs"
dev-repo: "git+https://github.com/tachukao/owl_lbfgs"
bug-reports: "https://github.com/tachukao/owl_lbfgs/issues"

build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]


depends: [
   "owl"
   "lbfgs"
]

